--- a/templates/Modelos/Borrando.html
+++ b/templates/Modelos/Borrando.html
@@ -6,7 +6,7 @@
     <title>Usuario De Baja</title>
     <body>
         <p>Borrando datos de usuario...</p>
-        <form name="AutoPost" id="AutoPost" action="/Modelos/" method="post">
+        <form name="AutoPost" id="AutoPost" action="/Modelos/" method="get">
             {% csrf_token %}
             </form>
             <script src="/static/AutoSubmit.js"></script>
