--- a/templates/Recursos/index.html
+++ b/templates/Recursos/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Bienvenido a VmCloud</h1>
         <h3>Puede ingresar con su usuario aqui:</h3>
-        <a class="btn" href="/Login/">Ingresar</a>
+        <a class="btn" href="Resources/">Ingresar</a>
         <h4>Si no se encuentra registrado, puede hacerlo:</h4>
         <a class="btn" href="/Login/register/">Registrarse</a>
     </body>
