--- a/css/Login/Login.css
+++ b/css/Login/Login.css
@@ -1,70 +1,99 @@
-html {
-    background-color: black;
-    color: lightgrey;
-    font-family: calibri;
-}
-
 body {
-    background-color: rgb(14, 20, 73);
-    position: relative;
-    width: 25%;
-    height: auto;
-    left: 37%;
-    border-radius: 3%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    font-family: 'Jost', sans-serif;
+    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 
-a {
-    color: lightgrey;
+center {
+    width: 350px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 5px 20px 50px #000;
+    overflow: hidden;
+    padding: 20px;
 }
 
-a:hover {
-    color: limegreen;
+h3 {
+    color: #573b8a;
+    font-size: 1.8em;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
-a:active {
-    color: lightblue;
-}
-
-input {
-    background-color: white;
-}
-
-textarea {
-    background-color: lightgrey;
-    font-family: calibri;
-}
-
-.etiq_false {
-    background-color: red;
-    color: black;
+h4 {
+    color: #573b8a;
+    font-size: 1.2em;
+    margin: 15px 0;
 }
 
 .etiq_true {
-    background-color: green;
-    color: black;
+    color: #28a745;
+    font-weight: bold;
 }
 
-.btn {
+.etiq_false {
+    color: #dc3545;
+    font-weight: bold;
+}
+
+form {
+    width: 100%;
+}
+
+label {
+    color: #573b8a;
+    font-size: 1.2em;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"], 
+input[type="password"] {
+    width: 80%;
+    height: 10px;
+    background: #e0dede;
+    display: block;
+    margin: 10px auto;
+    padding: 12px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+}
+
+.btn, 
+input[type="submit"] {
+    width: 60%;
+    height: 40px;
+    margin: 20px auto;
+    display: block;
+    color: #fff;
+    background: #573b8a;
+    font-size: 1em;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    transition: .2s ease-in;
+    cursor: pointer;
+}
+
+.btn:hover, 
+input[type="submit"]:hover {
+    background: #6d44b8;
+}
+
+a {
+    color: #573b8a;
     text-decoration: none;
-    color: black;
-    background-color: white;
-    border-style: inset;
+    font-weight: bold;
+    transition: color 0.3s;
 }
 
-.btn:hover {
-    text-decoration: none;
-    color: black;
-    background-color: lightgrey;
-    border-style: groove;
-}
-
-.btn:active {
-    text-decoration: none;
-    color: black;
-    background-color: grey;
-    border-style: dotted;
-}
-
-.exist {
-    color: red;
+a:hover {
+    color: #6d44b8;
 }
